Commit 30 - Google Maps 2

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -167,7 +167,8 @@
   },
   "MAP": {
     "TITLE": "Coin Map",
-    "BACK": "Back"
+    "BACK": "Back",
+    "DISCOVER": "Discover coin offers"
   },
   "ALERT": {
     "RECEIVECONTENT": "Congratulations, you just received"
