--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -167,7 +167,8 @@
   },
   "MAP": {
     "TITLE": "Carte des jetons",
-    "BACK": "Retour"
+    "BACK": "Retour",
+    "DISCOVER": "Découvrir les offres"
   },
   "ALERT": {
     "RECEIVECONTENT": "Félicitations, tu viens de recevoir"
