--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -106,7 +106,7 @@
     "EXPLANATION": "Creating an account will help you recover your coin wallet in case of smartphone loss."
   },
   "HOME": {
-    "WALLET": "Coin Wallet",
+    "WALLET": "Coins",
     "TYPE": "TYPE",
     "AMOUNT": "AMOUNT",
     "FIND": "Find coins around you.",
