--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -106,7 +106,7 @@
     "EXPLANATION": "La création d'un compte te permettra de retrouver tes jetons (coins) en cas de perte de ton smartphone."
   },
   "HOME": {
-    "WALLET": "Jetons collectés",
+    "WALLET": "Jetons (coins)",
     "TYPE": "JETON (COIN)",
     "AMOUNT": "MONTANT",
     "FIND": "Trouve des jetons autour de toi !",
